--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
     - ./.git:/repo.git
     networks: [ 'monorepo-net' ]
+    command: 'tail -f /dev/null'
 
 networks:
   monorepo-net:
